Enhance installation and testing

--- a/venv312/pyvenv.cfg
+++ b/venv312/pyvenv.cfg
@@ -2,4 +2,4 @@ home = /usr/bin
 include-system-site-packages = false
 version = 3.12.9
 executable = /usr/bin/python3.12
-command = /usr/bin/python3.12 -m venv /home/neo/Downloads/blockchain-energy-optimization (1)/blockchain-energy-optimization/venv312
+command = /home/neo/Downloads/blockchain-energy-optimization (1)/blockchain-energy-optimization/frontend/venv312/bin/python3.12 -m venv /home/neo/Downloads/blockchain-energy-optimization (1)/blockchain-energy-optimization/venv312
